--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
 	"bugs": {
 		"url": "https://github.com/Ilya-Potseluev/sftp-deploy/issues"
 	},
-	"homepage": "https://github.com/Ilya-Potseluev/sftp-deploy#readme"
+	"homepage": "https://github.com/Ilya-Potseluev/sftp-deploy#readme",
+	"type": "module"
 }
